add button styles and color

--- a/style.css
+++ b/style.css
@@ -12,8 +12,30 @@ html {
 
 h1 {
   font-size: 3rem;
-  color: #E2DBDB;
+  color: whitesmoke;
   display: flex;
   justify-content: center;
   position: center;
+}
+.btn{
+  font-weight: 700;
+  border-radius: 300px;
+  text-transform: uppercase;
+}
+.btn-primary{
+  background-color: #F05F44;
+  border-color:#F05F44;
+}
+.btn-primary:hover{
+  background-color: #EE4B08;
+  border-color: #EE4B08;
+  border-width: 4px;
+}
+.btn-xl{
+  padding: 1rem 2rem;
+}
+hr {
+  border-color:#F05F44;
+  border-width: 4px;
+  max-width: 65px;
 }
