--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
 .btn-primary:hover{
   background-color: #EE4B08;
   border-color: #EE4B08;
-  border-width: 4px;
+  border-width: 2px;
 }
 .btn-xl{
   padding: 1rem 2rem;
@@ -38,4 +38,7 @@ hr {
   border-color:#F05F44;
   border-width: 4px;
   max-width: 65px;
+}
+.buffer{
+  height: 10rem;
 }
